<resources>
    <string name="app_name" translatable="false">Xtra</string>
    <string name="notification_downloads_channel_id" translatable="false">xtra_downloads_channel</string>
    <string name="notification_live_channel_id" translatable="false">xtra_live_channel</string>
    <string name="lang_de" translatable="false">Deutsch</string>
    <string name="lang_en" translatable="false">English</string>
    <string name="lang_es" translatable="false">Español</string>
    <string name="lang_fr" translatable="false">Français</string>
    <string name="lang_in" translatable="false">Indonesia</string>
    <string name="lang_it" translatable="false">Italiano</string>
    <string name="lang_pt_br" translatable="false">Português - Brasil</string>
    <string name="lang_tr" translatable="false">Türkçe</string>
    <string name="lang_ru" translatable="false">Русский</string>
    <string name="lang_ar" translatable="false">العربية</string>
    <string name="lang_ja" translatable="false">日本語</string>
    <string name="lang_zh_tw" translatable="false">中文（繁體）</string>
    <string name="lang_zh_cn" translatable="false">中文（简体）</string>
    <string name="games">Games</string>
    <string name="popular">Popular</string>
    <string name="following">Following</string>
    <string name="downloads">Downloads</string>
    <string name="connection_error">Error connecting to the server. Please try again</string>
    <string name="sort">Sort</string>
    <string name="upload_date">Upload date</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="all_time">All time</string>
    <string name="view_count">View count</string>
    <string name="period">Period</string>
    <string name="apply">Apply</string>
    <string name="sort_and_period">Sort by: %1$s. Period: %2$s</string>
    <string name="trending">Trending</string>
    <string name="live">Live</string>
    <string name="videos">Videos</string>
    <string name="clips">Clips</string>
    <string name="scroll_down">Scroll down</string>
    <string name="auto">Auto</string>
    <string name="source">Source</string>
    <string name="audio_only">Audio only</string>
    <string name="chat_only">Chat only</string>
    <string name="select_quality">Select quality</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Download complete</string>
    <string name="uploaded_date">Uploaded %s</string>
    <string name="downloaded_date">Downloaded %s</string>
    <string name="welcome">Welcome</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="skip">Skip</string>
    <string name="specify_time">Specify time</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="duration">Duration: %s</string>
    <string name="invalid_time">Invalid time</string>
    <string name="from_is_greater">Time From must be less than To</string>
    <string name="to_is_lesser">Time To must be greater than From</string>
    <string name="to_is_longer">To can\'t be greater than video length</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure you want to delete this video?</string>
    <string name="token_expired">Your session has expired. Please log in again</string>
    <string name="no_connection">No Internet connection</string>
    <string name="connection_restored">Back online</string>
    <string name="notification_downloads_channel_title">Downloads</string>
    <string name="storage_permission_title">The app needs storage permission</string>
    <string name="storage_permission_message">Storage permission is required to download videos.</string>
    <string name="permission_denied">Required permissions were denied</string>
    <string name="nothing_here">Nothing here</string>
    <string name="watch_live">Watch live</string>
    <string name="watch_rerun">Watch rerun</string>
    <string name="open_player">Open player</string>
    <string name="error_stream">Error when loading stream</string>
    <string name="dark">Dark</string>
    <string name="amoled">Black</string>
    <string name="light">Light</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="landscape_chat_width">Landscape chat width</string>
    <string name="portrait_column_count">Portrait column count</string>
    <string name="landscape_column_count">Landscape column count</string>
    <string name="internal_storage">Internal storage</string>
    <string name="save_to">Save to</string>
    <string name="no_storage_detected">No available storage detected (most likely the phone is connected to a computer).</string>
    <string name="rewind">Rewind</string>
    <string name="forward">Fast forward</string>
    <string name="seconds_full">%s seconds</string>
    <string name="unfollow_channel">Unfollow %s?</string>
    <string name="now_following">You\'re now following %s</string>
    <string name="unfollowed">Unfollowed %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="chat_replay_unavailable">Chat replay is unavailable</string>
    <string name="video_subscribers_only">This video is only available to subscribers</string>
    <string name="player_error">Player error. Retrying</string>
    <string name="picture_in_picture">Picture-in-Picture</string>
    <string name="source_vod_start">Start: %s</string>
    <string name="source_vod_end">End: %s</string>
    <string name="stream_ended">The stream has ended</string>
    <string name="viewers_count">%s viewers</string>
    <string name="views">%s views</string>
    <string name="download_pending">Pending</string>
    <string name="downloading_progress">Downloading: %d%%</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="error_loading_user">Error loading user profile</string>
    <string name="reply">Reply</string>
    <string name="copy_message">Copy message</string>
    <string name="view_profile">View profile</string>
    <string name="chat">Chat</string>
    <string name="recent_emotes">Recent</string>
    <string name="notification_playback_channel_title">Playback</string>
    <string name="channels">Channels</string>
    <string name="watch_video">Watch full video</string>
    <string name="animated_emotes">Animated emotes</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="start">Start</string>
    <string name="set">Set</string>
    <string name="stop">Stop</string>
    <string name="hours">h</string>
    <string name="minutes">m</string>
    <string name="playback_will_stop">Playback will stop in %s</string>
    <string name="playback_will_stop_hours_minutes">Playback will stop in %1$s %2$s</string>
    <string name="timer_canceled">The timer has been canceled</string>
    <string name="trouble_logging_in">Having trouble logging in?</string>
    <string name="login_problem_solution">You can log in using an external browser. After you press \"Authorize\", a page with an error should appear. Copy the url, return here and click the \"Enter url\" button. Paste the url and click \"Log in\"</string>
    <string name="no_browser_found">No browser app found</string>
    <string name="browser_workaround">Your system browser is no longer supported. Please click the button below for a workaround</string>
    <string name="error">Error: %s</string>
    <string name="to_enter_url">Enter url</string>
    <string name="enter_url">Enter url</string>
    <string name="invalid_url">Invalid url</string>
    <string name="sort_and_order">Sort by: %1$s. Order: %2$s</string>
    <string name="time_followed">Time followed</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="last_broadcast">Last broadcast</string>
    <string name="order">Order</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="logout_title">Log out?</string>
    <string name="logout_msg">Logged in as %s</string>
    <string name="language">Language</string>
    <string name="never">Never</string>
    <string name="blue">Blue</string>
    <string name="rounduserimage">Circle profile pictures</string>
    <string name="truncated_view_counts">Truncated view counts</string>
    <string name="broadcastersCount">Show broadcasters count on games</string>
    <string name="startonfollowed">Start on following page</string>
    <string name="when_logged_in">When logged in</string>
    <string name="show_scrolltop">Show scroll to top button</string>
    <string name="bold_usernames">Bold usernames</string>
    <string name="randomcolor">Random color for users without color</string>
    <string name="message_limit">Message limit</string>
    <string name="player_defaultquality">Default player quality</string>
    <string name="player_doubletap">Double tap to toggle chat</string>
    <string name="player_channel">Show channel name</string>
    <string name="player_pause">Show pause button on livestreams</string>
    <string name="token_random_deviceid">Random device id</string>
    <string name="api_helix_client_id">Helix client id</string>
    <string name="api_gql_client_id">GQL client id</string>
    <string name="playback_speed">Playback speed</string>
    <string name="quality">Quality</string>
    <string name="saved_value">Saved value</string>
    <string name="video_type_archive">Past broadcast</string>
    <string name="video_type_highlight">Highlight</string>
    <string name="video_type_upload">Upload</string>
    <string name="video_type_rerun">Rerun</string>
    <string name="all">All</string>
    <string name="type">Type</string>
    <string name="room_emote">Emote</string>
    <string name="buffer_settings">Buffer settings</string>
    <string name="player_buttons">Player buttons</string>
    <string name="draw_behind_cutouts">Draw behind display cutouts</string>
    <string name="check_updates">Check for updates</string>
    <string name="update_url">Update check url</string>
    <string name="update_using_browser">Open update link in browser</string>
    <string name="auto_check_updates">Check for updates on startup</string>
    <string name="update_check_frequency">Update check frequency</string>
    <string name="live_notifications">Live notifications</string>
    <string name="download_settings">Downloads</string>
    <string name="update_settings">Update settings</string>
    <string name="chat_settings">Chat</string>
    <string name="ui_settings">UI</string>
    <string name="debug_settings">Debug</string>
    <string name="player">Player</string>
    <string name="use_background_audio">Play audio in the background</string>
    <string name="backup_and_restore_settings">Backup and restore</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="player_settings">Player settings</string>
    <string name="appearance">Appearance</string>
    <string name="network_settings">Network</string>
    <string name="updates">Updates</string>
    <string name="about">About</string>
    <string name="gpl3_label" translatable="false">GNU Affero General Public License v3.0</string>
    <string name="license">License</string>
    <string name="social_reddit_link" translatable="false">https://www.reddit.com/r/XtraForTwitch</string>
    <string name="source_code_link" translatable="false">https://github.com/crackededed/Xtra</string>
    <string name="social">Social</string>
    <string name="source_code">Source code</string>
    <string name="version">Version</string>
    <string name="app_description">Xtra is a Twitch player and browser for Android.</string>
</resources>