<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="check_updates"
        android:title="@string/check_updates"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <PreferenceCategory
        android:title="@string/update_settings"
        app:iconSpaceReserved="false">

    <EditTextPreference
        android:defaultValue="https://api.github.com/repos/crackededed/xtra/releases/tags/latest"
        android:key="update_url"
        android:title="@string/update_url"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="update_check_enabled"
        android:title="@string/auto_check_updates"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <EditTextPreference
        android:defaultValue="7"
        android:key="update_check_frequency"
        android:title="@string/update_check_frequency"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="update_use_browser"
        android:title="@string/update_using_browser"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
